# workspace

./: .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  TASK.md  hello_acp.py  idea-meeting-report.md  memORY.md  memory.md  omikuji.html  omikuji_app.py  schedule-tasks.yaml  test_acp_config.py  test_script.py  test_webhook.py  x-memo.md  x_oauth.py
.github/workflows/: deploy-memory.yml  gitleaks.yml
.pip/charset_normalizer-3.4.7.dist-info/: RECORD
.pip/deep_translator-1.11.4.dist-info/: RECORD
TASK/backlog/: 001-skills-repo.md  002-workspace-repo.md  003-gitignore.md  004-initial-commit.md  005-quote-retweet-upgrade.md  006-local-info-aggregation.md  007-secret-scan.md
config/: pipeline.yaml
memory/: 2026-02-27.md  CONTRIBUTING.md  README.md
memory/docs/: index.md
omikuji-app/: index.html  server.js
project/: github-release-investigation-v0.1.12.md
project/agi-glossary/: generate.py  setup-service.sh  terms.json
project/agi-knowledge-graph/: README.md  (+8 more)
project/x-bookmarks-fetcher/: .gitignore  README.md  bookmarks_cli.py  config.env.example  pyproject.toml
scripts/: add_paper_to_kb.py  agi_paper_debate.py  auto_content_pipeline.py  content_queue.py  engagement_tracker.py  generate_diagram.py  knowledge_base_updater.py  multi_source_fetcher.py  paper_auto_collector.py  papers_collector.py  papers_x_poster.py  service_mesh.sh  task_check.py  translate_content.py  weekly_report.py  x_auth_clean.py
temp/: pipeline-task.txt
webapp/: index.html  script.js  style.css
(+57 files in other folders)
